k8s/hr-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-gateway
  namespace: hr-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-gateway
  template:
    metadata:
      labels:
        app: hr-gateway
    spec:
      containers:
        - name: hr-gateway
          image: 850995576970.dkr.ecr.ap-northeast-2.amazonaws.com/hradar-gateway:d5dbf7faac2681fcfd4d9fc200642ee6f722f5b2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hr-gateway
  namespace: hr-system
spec:
  type: NodePort
  selector:
    app: hr-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
