k8s/hr-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-notification
  namespace: hr-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hr-notification
  template:
    metadata:
      labels:
        app: hr-notification
    spec:
      containers:
        - name: hr-notification
          image: 123456789012.dkr.ecr.ap-northeast-2.amazonaws.com/hr-notification:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: hr-notification
  namespace: hr-system
spec:
  selector:
    app: hr-notification
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
