k8s/zookeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: hr-system
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.9.0
          ports:
            - containerPort: 2181
      nodeSelector:
        # If needed, can add node selector
        # kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: hr-system
  labels:
    app: zookeeper
spec:
  ports:
    - port: 2181
      targetPort: 2181
      name: client
  selector:
    app: zookeeper
